# git-graph-enhanced

./: .gitignore  .vscodeignore  AGENTS.md  Cargo.toml  LICENSE  README.md  TODO.md  esbuild.mjs  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml  release.yml
crates/git-graph-core/: Cargo.toml
crates/git-graph-core/src/: branch.rs  commit.rs  content.rs  diff.rs  error.rs  filter.rs  graph.rs  lib.rs  repo.rs  search.rs  stash.rs  tag.rs
crates/git-graph-core/tests/: repo_tests.rs
crates/git-graph-server/: Cargo.toml
crates/git-graph-server/src/: handler.rs  main.rs  protocol.rs
crates/git-graph-server/tests/: rpc_tests.rs
docs/: architecture.md
docs/archive/: idea.md
docs/archive/clean-room-originals/: AGENTS.md  ai-behavior.md
docs/archive/clean-room-originals/.kiro-agents-prompts/: commander.md  default.md  fullstack.md
scripts/: build-rust.sh  create-test-fixtures.sh
src/: askpass.ts  avatar.ts  backend.ts  commands.ts  config.ts  diff-provider.ts  extension.ts  git-operations.ts  pr-provider.ts  types.ts  webview-provider.ts
src/__tests__/: backend.test.ts  config.test.ts  diff-provider.test.ts  types.test.ts
webview/: dev-data.ts  dev.html
webview/__tests__/: emoji.test.ts  integration.test.ts  markdown.test.ts  scroll-math.test.ts  search.test.ts  theme.test.ts
webview/src/: commit-panel.ts  emoji.ts  graph-renderer.ts  main.ts  markdown.ts  message-handler.ts  search.ts  theme.ts
webview/styles/: main.css
