[package]
name = "git-graph-server"
version = "0.1.0"
edition = "2021"

[dependencies]
git-graph-core = { path = "../git-graph-core" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = "3"
serde_json = { workspace = true }
